force-app/main/default/objects/Value_Delivery_Setup__c/Value_Delivery_Setup__c.object-meta.xml
<CustomObject>
    <label>Objectives and Attendees for Participant</label>
    <nameField>
        <label>Value Delivery Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives and Attendees for Participant</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>