force-app/main/default/objects/Value_Delivery_Setup__c/fields/Component_Title__c.field-meta.xml
<CustomField>
    <fullName>Component_Title__c</fullName>
    <label>Component Title</label>
    <type>TextArea</type>
</CustomField>