force-app/main/default/objects/Value_Delivery_Setup__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiate And Confirm</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>