force-app/main/default/objects/Value_Delivery_Setup__c/fields/Value_Delivery_Session__c.field-meta.xml
<CustomField>
    <fullName>Value_Delivery_Session__c</fullName>
    <label>Value Delivery Session</label>
    <referenceTo>Value_Delivery_Session__c</referenceTo>
    <relationshipLabel>Objectives and Attendees for Participant</relationshipLabel>
    <relationshipName>Objectives_and_Attendees_for_Participant</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>